--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">sayfa_gecisi</string>
+    <string name="app_name">CatchMe</string>
     <string name="button">Button</string>
 </resources>
